Fixed background on mobile

--- a/custom.css
+++ b/custom.css
@@ -28,41 +28,30 @@
     --v-warning-base: #23ae65;
 }
 
-/* Desktop background */
-@media screen and (min-width:450px) {
-    /* Animating hue theme */
-    main#content {
-        background: linear-gradient(370deg,#23ae65, #000000, #72eed2);
-        background-size: 400% 400%;
-    
-        -webkit-animation: AnimationName 30s ease infinite;
-        -moz-animation: AnimationName 30s ease infinite;
-        animation: AnimationName 30s ease infinite;
-    }
-    
-    @-webkit-keyframes AnimationName {
-        0%{background-position:0% 50%}
-        50%{background-position:100% 50%}
-        100%{background-position:0% 50%}
-    }
-    @-moz-keyframes AnimationName {
-        0%{background-position:0% 50%}
-        50%{background-position:100% 50%}
-        100%{background-position:0% 50%}
-    }
-    @keyframes AnimationName {
-        0%{background-position:0% 50%}
-        50%{background-position:100% 50%}
-        100%{background-position:0% 50%}
-    }
+/* Animating hue theme */
+main#content {
+    background: linear-gradient(370deg,#23ae65, #000000, #72eed2);
+    background-size: 400% 400%;
+
+    -webkit-animation: AnimationName 30s ease infinite;
+    -moz-animation: AnimationName 30s ease infinite;
+    animation: AnimationName 30s ease infinite;
 }
 
-/* Mobile background */
-@media screen and (max-width:450px) {
-    main#content {
-        background: linear-gradient(270deg,#EF6DA0, #ff86f5, #5a02ff);
-        background-size: 400% 400%;
-    }
+@-webkit-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@-moz-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
 }
 
 /* Make nav panel transparent */
